# MiniLD58

./: Ball.cpp  Ball.hpp  CMakeLists.txt  LevelScene.cpp  LevelScene.hpp  MiniLD58.cpp  MiniLD58.hpp  Paddle.cpp  Paddle.hpp  main.cpp
assets/script/: ball.json  level.json  paddle.json
